--- a/python/examples/example_constant_species/ExampleEquilibrationLogic.ipynb
+++ b/python/examples/example_constant_species/ExampleEquilibrationLogic.ipynb
@@ -496,9 +496,9 @@
     }
    ],
    "source": [
-    "# Call simulation with singular Jacobian and simulationFSA mode\n",
+    "# Call simulation with singular Jacobian and integrateIfNewtonFails mode\n",
     "model.setTimepoints(np.full(1, np.inf))\n",
-    "model.setSteadyStateSensitivityMode(amici.SteadyStateSensitivityMode.simulationFSA)\n",
+    "model.setSteadyStateSensitivityMode(amici.SteadyStateSensitivityMode.integrateIfNewtonFails)\n",
     "solver = model.getSolver()\n",
     "solver.setNewtonMaxSteps(10)\n",
     "solver.setSensitivityMethod(amici.SensitivityMethod.forward)\n",
@@ -883,7 +883,7 @@
    ],
    "source": [
     "# Singluar Jacobian, use simulation\n",
-    "model.setSteadyStateSensitivityMode(amici.SteadyStateSensitivityMode.simulationFSA)\n",
+    "model.setSteadyStateSensitivityMode(amici.SteadyStateSensitivityMode.integrateIfNewtonFails)\n",
     "solver = model.getSolver()\n",
     "solver.setNewtonMaxSteps(10)\n",
     "solver.setSensitivityMethod(amici.SensitivityMethod.forward)\n",
@@ -1135,7 +1135,7 @@
    ],
    "source": [
     "# Non-singular Jacobian, use simulaiton\n",
-    "model_reduced.setSteadyStateSensitivityMode(amici.SteadyStateSensitivityMode.simulationFSA)\n",
+    "model_reduced.setSteadyStateSensitivityMode(amici.SteadyStateSensitivityMode.integrateIfNewtonFails)\n",
     "solver_reduced = model_reduced.getSolver()\n",
     "solver_reduced.setNewtonMaxSteps(0)\n",
     "solver_reduced.setSensitivityMethod(amici.SensitivityMethod.forward)\n",
@@ -1186,7 +1186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
