--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1025,6 +1025,20 @@ Survival or apoptosis is a binary decision in individual cells. However, at the 
 	journal = {bioRxiv}
 }
 
+@Article{SluijsMaa2022,
+  author   = {van Sluijs, Bob and Maas, Roel J. M. and van der Linden, Ardjan J. and de Greef, Tom F. A. and Huck, Wilhelm T. S.},
+  journal  = {Nature Communications},
+  title    = {A microfluidic optimal experimental design platform for forward design of cell-free genetic networks},
+  year     = {2022},
+  issn     = {2041-1723},
+  number   = {1},
+  pages    = {3626},
+  volume   = {13},
+  abstract = {Cell-free protein synthesis has been widely used as a “breadboard” for design of synthetic genetic networks. However, due to a severe lack of modularity, forward engineering of genetic networks remains challenging. Here, we demonstrate how a combination of optimal experimental design and microfluidics allows us to devise dynamic cell-free gene expression experiments providing maximum information content for subsequent non-linear model identification. Importantly, we reveal that applying this methodology to a library of genetic circuits, that share common elements, further increases the information content of the data resulting in higher accuracy of model parameters. To show modularity of model parameters, we design a pulse decoder and bistable switch, and predict their behaviour both qualitatively and quantitatively. Finally, we update the parameter database and indicate that network topology affects parameter estimation accuracy. Utilizing our methodology provides us with more accurate model parameters, a necessity for forward engineering of complex genetic networks.},
+  doi      = {10.1038/s41467-022-31306-3},
+  refid    = {van Sluijs2022},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
