Update reference list

--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1052,6 +1052,15 @@ Survival or apoptosis is a binary decision in individual cells. However, at the 
   url          = {https://www.biorxiv.org/content/early/2022/08/11/2022.08.08.503176},
 }
 
+@Article{VillaverdeRai2022,
+  author  = {Villaverde, Alejandro F. and Raimúndez, Elba and Hasenauer, Jan and Banga, Julio R.},
+  journal = {IEEE/ACM Transactions on Computational Biology and Bioinformatics},
+  title   = {Assessment of Prediction Uncertainty Quantification Methods in Systems Biology},
+  year    = {2022},
+  pages   = {1-12},
+  doi     = {10.1109/TCBB.2022.3213914},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
