Update reference list

--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1061,6 +1061,20 @@ Survival or apoptosis is a binary decision in individual cells. However, at the 
   doi     = {10.1109/TCBB.2022.3213914},
 }
 
+@Article{MishraWan2023,
+  author   = {Shekhar Mishra and Ziyu Wang and Michael J. Volk and Huimin Zhao},
+  journal  = {Metabolic Engineering},
+  title    = {Design and application of a kinetic model of lipid metabolism in Saccharomyces cerevisiae},
+  year     = {2023},
+  issn     = {1096-7176},
+  pages    = {12-18},
+  volume   = {75},
+  abstract = {Lipid biosynthesis plays a vital role in living cells and has been increasingly engineered to overproduce various lipid-based chemicals. However, owing to the tightly constrained and interconnected nature of lipid biosynthesis, both understanding and engineering of lipid metabolism remain challenging, even with the help of mathematical models. Here we report the development of a kinetic metabolic model of lipid metabolism in Saccharomyces cerevisiae that integrates fatty acid biosynthesis, glycerophospholipid metabolism, sphingolipid metabolism, storage lipids, lumped sterol synthesis, and the synthesis and transport of relevant target-chemicals, such as fatty acids and fatty alcohols. The model was trained on lipidomic data of a reference S. cerevisiae strain, single knockout mutants, and lipid overproduction strains reported in literature. The model was used to design mutants for fatty alcohol overproduction and the lipidomic analysis of the resultant mutant strains coupled with model-guided hypothesis led to discovery of a futile cycle in the triacylglycerol biosynthesis pathway. In addition, the model was used to explain successful and unsuccessful mutant designs in metabolic engineering literature. Thus, this kinetic model of lipid metabolism can not only enable the discovery of new phenomenon in lipid metabolism but also the engineering of mutant strains for overproduction of lipids.},
+  doi      = {https://doi.org/10.1016/j.ymben.2022.11.003},
+  keywords = {Lipid metabolism, Kinetic model, Free fatty acid, Fatty alcohol},
+  url      = {https://www.sciencedirect.com/science/article/pii/S1096717622001380},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
