Update reference list

--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1075,6 +1075,20 @@ Survival or apoptosis is a binary decision in individual cells. However, at the 
   url      = {https://www.sciencedirect.com/science/article/pii/S1096717622001380},
 }
 
+@Article{MassonisVil2022,
+  author   = {Massonis, Gemma and Villaverde, Alejandro F and Banga, Julio R},
+  journal  = {Bioinformatics},
+  title    = {{Improving dynamic predictions with ensembles of observable models}},
+  year     = {2022},
+  issn     = {1367-4803},
+  month    = {11},
+  note     = {btac755},
+  abstract = {{Dynamic mechanistic modelling in systems biology has been hampered by the complexity and variability associated with the underlying interactions, and by uncertain and sparse experimental measurements. Ensemble modelling, a concept initially developed in statistical mechanics, has been introduced in biological applications with the aim of mitigating those issues. Ensemble modelling uses a collection of different models compatible with the observed data to describe the phenomena of interest. However, since systems biology models often suffer from lack of identifiability and observability, ensembles of models are particularly unreliable when predicting non-observable states.We present a strategy to assess and improve the reliability of a class of model ensembles. In particular, we consider kinetic models described using ordinary differential equations (ODEs) with a fixed structure. Our approach builds an ensemble with a selection of the parameter vectors found when performing parameter estimation with a global optimization metaheuristic. This technique enforces diversity during the sampling of parameter space and it can quantify the uncertainty in the predictions of state trajectories. We couple this strategy with structural identifiability and observability analysis, and when these tests detect possible prediction issues we obtain model reparameterizations that surmount them. The end result is an ensemble of models with the ability to predict the internal dynamics of a biological process. We demonstrate our approach with models of glucose regulation, cell division, circadian oscillations, and the JAK-STAT signalling pathway.The code that implements the methodology and reproduces the results is available at https://doi.org/10.5281/zenodo.6782638Supplementary data are available at Bioinformatics online.}},
+  doi      = {10.1093/bioinformatics/btac755},
+  eprint   = {https://academic.oup.com/bioinformatics/advance-article-pdf/doi/10.1093/bioinformatics/btac755/47214747/btac755.pdf},
+  url      = {https://doi.org/10.1093/bioinformatics/btac755},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
