--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1089,6 +1089,19 @@ Survival or apoptosis is a binary decision in individual cells. However, at the 
   url      = {https://doi.org/10.1093/bioinformatics/btac755},
 }
 
+@Article{RaimundezFed2022,
+  author       = {Raimundez, Elba and Fedders, Michael and Hasenauer, Jan},
+  journal      = {bioRxiv},
+  title        = {Posterior marginalization accelerates Bayesian inference for dynamical systems},
+  year         = {2022},
+  abstract     = {Bayesian inference is an important method in the life and natural sciences for learning from data. It provides information about parameter uncertainties, and thereby the reliability of models and their predictions. Yet, generating representative samples from the Bayesian posterior distribution is often computationally challenging. Here, we present an approach that lowers the computational complexity of sample generation for problems with scaling, offset and noise parameters. The proposed method is based on the marginalization of the posterior distribution, which reduces the dimensionality of the sampling problem. We provide analytical results for a broad class of problems and show that the method is suitable for a large number of applications. Subsequently, we demonstrate the benefit of the approach for various application examples from the field of systems biology. We report a substantial improvement up to 50 times in the effective sample size per unit of time, in particular when applied to multi-modal posterior problems. As the scheme is broadly applicable, it will facilitate Bayesian inference in different research fields.Competing Interest StatementThe authors have declared no competing interest.},
+  doi          = {10.1101/2022.12.02.518841},
+  elocation-id = {2022.12.02.518841},
+  eprint       = {https://www.biorxiv.org/content/early/2022/12/03/2022.12.02.518841.full.pdf},
+  publisher    = {Cold Spring Harbor Laboratory},
+  url          = {https://www.biorxiv.org/content/early/2022/12/03/2022.12.02.518841},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
