--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -999,19 +999,6 @@ Survival or apoptosis is a binary decision in individual cells. However, at the 
   url      = {https://www.sciencedirect.com/science/article/pii/S2211124721009372},
 }
 
-@article {Sundqvist2022.02.15.480629,
-	author = {Sundqvist, Nicolas and Sten, Sebastian and Engstr{\"o}m, Maria and Cedersund, Gunnar},
-	title = {Mechanistic model for human brain metabolism and the neurovascular coupling.},
-	elocation-id = {2022.02.15.480629},
-	year = {2022},
-	doi = {10.1101/2022.02.15.480629},
-	publisher = {Cold Spring Harbor Laboratory},
-	abstract = {The neurovascular coupling (NVC) connects cerebral activity, blood flow, and metabolism. This interconnection is used in for instance functional imaging, which analyses the blood-oxygen-dependent (BOLD) signal. The mechanisms underlying the NVC are complex, which warrants a model-based analysis of data. We have previously developed a mechanistically detailed model for the NVC, and others have proposed detailed models for cerebral metabolism. However, existing metabolic models are still not fully utilizing available magnetic resonance spectroscopy (MRS) data and are not connected to detailed models for NVC. Therefore, we herein present a new model that integrates mechanistic modelling of both MRS and BOLD data. The metabolic model covers central metabolism, and can describe time-series data for glucose, lactate, aspartate, and glutamine, measured after visual stimuli. Statistical tests confirm that the model can describe both estimation data and predict independent validation data, not used for model training. The interconnected NVC model can simultaneously describe BOLD data and can be used to predict expected metabolic responses in experiments where metabolism has not been measured. This model is a step towards a useful and mechanistically detailed model for cerebral blood flow and metabolism, with potential applications in both basic research and clinical applications.Competing Interest StatementThe authors have declared no competing interest.},
-	URL = {https://www.biorxiv.org/content/early/2022/02/19/2022.02.15.480629},
-	eprint = {https://www.biorxiv.org/content/early/2022/02/19/2022.02.15.480629.full.pdf},
-	journal = {bioRxiv}
-}
-
 @article {Froehlich2022.02.17.480899,
 	author = {Fr{\"o}hlich, Fabian and Gerosa, Luca and Muhlich, Jeremy and Sorger, Peter K.},
 	title = {Mechanistic model of MAPK signaling reveals how allostery and rewiring contribute to drug resistance},
@@ -1114,6 +1101,20 @@ Survival or apoptosis is a binary decision in individual cells. However, at the 
   abstract = {Little is known about the impact of morphological disorders in distinct zones on metabolic zonation. It was described recently that periportal fibrosis did affect the expression of CYP proteins, a set of pericentrally located drug-metabolizing enzymes. Here, we investigated whether periportal steatosis might have a similar effect. Periportal steatosis was induced in C57BL6/J mice by feeding a high-fat diet with low methionine/choline content for either two or four weeks. Steatosis severity was quantified using image analysis. Triglycerides and CYP activity were quantified in photometric or fluorometric assay. The distribution of CYP3A4, CYP1A2, CYP2D6, and CYP2E1 was visualized by immunohistochemistry. Pharmacokinetic parameters of test drugs were determined after injecting a drug cocktail (caffeine, codeine, and midazolam). The dietary model resulted in moderate to severe mixed steatosis confined to periportal and midzonal areas. Periportal steatosis did not affect the zonal distribution of CYP expression but the activity of selected CYPs was associated with steatosis severity. Caffeine elimination was accelerated by microvesicular steatosis, whereas midazolam elimination was delayed in macrovesicular steatosis. In summary, periportal steatosis affected parameters of pericentrally located drug metabolism. This observation calls for further investigations of the highly complex interrelationship between steatosis and drug metabolism and underlying signaling mechanisms.},
   doi      = {10.1038/s41598-022-26483-6},
   refid    = {Albadry2022},
+}
+
+@Article{SundqvistSte2022,
+  author    = {Sundqvist, Nicolas AND Sten, Sebastian AND Thompson, Peter AND Andersson, Benjamin Jan AND Engström, Maria AND Cedersund, Gunnar},
+  journal   = {PLOS Computational Biology},
+  title     = {Mechanistic model for human brain metabolism and its connection to the neurovascular coupling},
+  year      = {2022},
+  month     = {12},
+  number    = {12},
+  pages     = {1-24},
+  volume    = {18},
+  abstract  = {The neurovascular and neurometabolic couplings (NVC and NMC) connect cerebral activity, blood flow, and metabolism. This interconnection is used in for instance functional imaging, which analyses the blood-oxygen-dependent (BOLD) signal. The mechanisms underlying the NVC are complex, which warrants a model-based analysis of data. We have previously developed a mechanistically detailed model for the NVC, and others have proposed detailed models for cerebral metabolism. However, existing metabolic models are still not fully utilizing available magnetic resonance spectroscopy (MRS) data and are not connected to detailed models for NVC. Therefore, we herein present a new model that integrates mechanistic modelling of both MRS and BOLD data. The metabolic model covers central metabolism, using a minimal set of interactions, and can describe time-series data for glucose, lactate, aspartate, and glutamate, measured after visual stimuli. Statistical tests confirm that the model can describe both estimation data and predict independent validation data, not used for model training. The interconnected NVC model can simultaneously describe BOLD data and can be used to predict expected metabolic responses in experiments where metabolism has not been measured. This model is a step towards a useful and mechanistically detailed model for cerebral blood flow and metabolism, with potential applications in both basic research and clinical applications.},
+  doi       = {10.1371/journal.pcbi.1010798},
+  publisher = {Public Library of Science},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
