--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1117,6 +1117,19 @@ Survival or apoptosis is a binary decision in individual cells. However, at the 
   publisher = {Public Library of Science},
 }
 
+@Article{MeyerSoe2022,
+  author   = {Kristian Meyer and Mikkel {Søes Ibsen} and Lisa Vetter-Joss and Ernst {Broberg Hansen} and Jens Abildskov},
+  journal  = {Journal of Chromatography A},
+  title    = {Industrial ion-exchange chromatography development using discontinuous Galerkin methods coupled with forward sensitivity analysis},
+  year     = {2022},
+  issn     = {0021-9673},
+  pages    = {463741},
+  abstract = {In this work, a discontinuous Galerkin method coupled with forward sensitivity analysis (DG-FSA) is presented. The DG-FSA method is used to reduce computational cost required for model-based ion-exchange chromatography development using industrial load samples. As an example, the design of an anion-exchange chromatography step is considered. This step is used to purify an experimental peptide product called Protein G from Novo Nordisk A/S (Bagsvrd, Denmark). The results demonstrate, that a fourth order DG-FSA method can reduce computational cost of inverse problems by a factor ×16 compared to a second (low) order DG-FSA method. Furthermore, the fourth-order DG-FSA method enable the computation of probability distributions of optimized processing conditions given uncertainty in model parameters or inputs. This analysis is not possible within a reasonable timeframe when applying the second (low) order DG-FSA method. The design procedure facilitates the optimization of the Protein G purification step. In an experimental validation run, the productivity is increased by 70% while sacrificing 4% yield at a similar purity constraint compared to an experiment with baseline performance.},
+  doi      = {10.1016/j.chroma.2022.463741},
+  keywords = {Discontinuous Galerkin method, Forward sensitivity analysis, Model calibration, Uncertainty quantification, Process optimization},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0021967322009323},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
