--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1104,7 +1104,7 @@ Survival or apoptosis is a binary decision in individual cells. However, at the 
 }
 
 @Article{SundqvistSte2022,
-  author    = {Sundqvist, Nicolas AND Sten, Sebastian AND Thompson, Peter AND Andersson, Benjamin Jan AND Engström, Maria AND Cedersund, Gunnar},
+  author    = {Sundqvist, Nicolas and Sten, Sebastian and Thompson, Peter and Andersson, Benjamin Jan and Engström, Maria and Cedersund, Gunnar},
   journal   = {PLOS Computational Biology},
   title     = {Mechanistic model for human brain metabolism and its connection to the neurovascular coupling},
   year      = {2022},
