--- a/binder/overview.ipynb
+++ b/binder/overview.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "  Brief intro to AMICI for first-time users.\n",
     "\n",
-    "* [Example \"steadystate](../python/examples/example_steadystate/ExampleSteadystate.ipynb)\n",
+    "* [Example \"steadystate\"](../python/examples/example_steadystate/ExampleSteadystate.ipynb)\n",
     "\n",
     "  A more detailed introduction to the AMICI interface, demonstrating sensitivity analysis, various options, finite difference checks, ...\n",
     "\n",
