--- a/python/examples/example_errors.ipynb
+++ b/python/examples/example_errors.ipynb
@@ -87,7 +87,8 @@
     "    problem_parameters=problem_parameters,\n",
     "    scaled_parameters=True\n",
     ")\n",
-    "print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])"
+    "print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])\n",
+    "assert [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]] == ['AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_TOO_MUCH_WORK', 'AMICI_SUCCESS', 'AMICI_SUCCESS']"
    ]
   },
   {
@@ -186,7 +187,8 @@
     "    problem_parameters=problem_parameters,\n",
     "    scaled_parameters=True\n",
     ")\n",
-    "print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])"
+    "print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])\n",
+    "assert [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]] == ['AMICI_TOO_MUCH_WORK']"
    ]
   },
   {
@@ -284,7 +286,8 @@
     "    problem_parameters=problem_parameters,\n",
     "    scaled_parameters=True\n",
     ")\n",
-    "print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])"
+    "print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])\n",
+    "assert [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]] == ['AMICI_SUCCESS', 'AMICI_ERR_FAILURE', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS']"
    ]
   },
   {
@@ -389,7 +392,8 @@
     "    problem_parameters=problem_parameters,\n",
     "    scaled_parameters=True\n",
     ")\n",
-    "print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])"
+    "print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])\n",
+    "assert [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]] == ['AMICI_ERROR', 'AMICI_SUCCESS']"
    ]
   },
   {
@@ -436,7 +440,8 @@
     "    scaled_parameters=True,\n",
     "    solver=amici_solver\n",
     ")\n",
-    "print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])"
+    "print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])\n",
+    "assert all(rdata.status == amici.AMICI_SUCCESS for rdata in res[RDATAS])"
    ]
   },
   {
@@ -472,7 +477,8 @@
     "    problem_parameters=problem_parameters,\n",
     "    scaled_parameters=True\n",
     ")\n",
-    "print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])"
+    "print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])\n",
+    "assert [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]] == ['AMICI_FIRST_RHSFUNC_ERR']"
    ]
   },
   {
@@ -646,7 +652,8 @@
     "    scaled_parameters=True,\n",
     "    solver=amici_solver,\n",
     ")\n",
-    "print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])"
+    "print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])\n",
+    "assert [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]] == ['AMICI_ERROR']"
    ]
   },
   {
@@ -706,7 +713,8 @@
     "    scaled_parameters=True,\n",
     "    solver=amici_solver,\n",
     ")\n",
-    "print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])"
+    "print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])\n",
+    "assert all(rdata.status == amici.AMICI_SUCCESS for rdata in res[RDATAS])"
    ]
   },
   {
@@ -726,6 +734,7 @@
     "    force_compile=True,\n",
     "    model_name=\"Blasi_CellSystems2016_2\"\n",
     ")\n",
+    "del os.environ[\"AMICI_EXPERIMENTAL_SBML_NONCONST_CLS\"]\n",
     "\n",
     "amici_solver = amici_model.getSolver()\n",
     "amici_solver.setSensitivityMethod(amici.SensitivityMethod.forward)\n",
@@ -739,7 +748,7 @@
     "    solver=amici_solver,\n",
     ")\n",
     "print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])\n",
-    "del os.environ[\"AMICI_EXPERIMENTAL_SBML_NONCONST_CLS\"]"
+    "assert all(rdata.status == amici.AMICI_SUCCESS for rdata in res[RDATAS])"
    ]
   },
   {
@@ -781,7 +790,8 @@
     "    scaled_parameters=True,\n",
     "    solver=amici_solver,\n",
     ")\n",
-    "print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])"
+    "print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])\n",
+    "assert [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]] == ['AMICI_ERROR', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS']"
    ]
   },
   {
@@ -847,7 +857,8 @@
     "\n",
     "rdata = res[RDATAS][0]\n",
     "print(f\"preeq_status={list(map(amici.SteadyStateStatus, rdata.preeq_status.flatten()))}\")\n",
-    "print(f\"{rdata.preeq_numsteps=}\")"
+    "print(f\"{rdata.preeq_numsteps=}\")\n",
+    "assert all(rdata.status == amici.AMICI_SUCCESS for rdata in res[RDATAS])"
    ]
   },
   {
@@ -880,7 +891,8 @@
     "\n",
     "rdata = res[RDATAS][0]\n",
     "print(f\"preeq_status={list(map(amici.SteadyStateStatus, rdata.preeq_status.flatten()))}\")\n",
-    "print(f\"{rdata.preeq_numsteps=}\")"
+    "print(f\"{rdata.preeq_numsteps=}\")\n",
+    "assert all(rdata.status == amici.AMICI_SUCCESS for rdata in res[RDATAS])"
    ]
   },
   {
@@ -915,7 +927,8 @@
     "\n",
     "rdata = res[RDATAS][0]\n",
     "print(f\"preeq_status={list(map(amici.SteadyStateStatus, rdata.preeq_status.flatten()))}\")\n",
-    "print(f\"{rdata.preeq_numsteps=}\")"
+    "print(f\"{rdata.preeq_numsteps=}\")\n",
+    "assert [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]] == ['AMICI_ERROR', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS']"
    ]
   },
   {
