--- a/binder/overview.ipynb
+++ b/binder/overview.ipynb
@@ -22,10 +22,14 @@
     "* [Experimental conditions](../python/examples/example_presimulation/ExampleExperimentalConditions.ipynb)\n",
     "\n",
     "  How to represent different experimental conditions in AMICI and how to use preequilibration.\n",
-    "  \n",
+    "\n",
     "* [Steadystate (sensitivities)](../python/examples/example_constant_species/ExampleEquilibrationLogic.ipynb)\n",
     "\n",
-    "  Describes and demonstrates the various algorithms for computing steady states and steady-state sensitivities."
+    "  Describes and demonstrates the various algorithms for computing steady states and steady-state sensitivities.\n",
+    "\n",
+    "* [Simulation errors](../python/examples/example_errors.ipynb)\n",
+    "\n",
+    "  Demonstrates common simulation failures and gives some hints for interpreting, debugging, and fixing them.\n"
    ]
   }
  ],
