--- a/python/examples/example_errors.ipynb
+++ b/python/examples/example_errors.ipynb
@@ -29,14 +29,15 @@
     "from pathlib import Path\n",
     "from contextlib import suppress\n",
     "\n",
-    "\n",
     "try:\n",
     "    import benchmark_models_petab\n",
     "except ModuleNotFoundError:\n",
     "    # install `benchmark_models_petab` if necessary\n",
-    "    import sys\n",
-    "    !{sys.executable} -m pip install -e git+https://github.com/Benchmarking-Initiative/Benchmark-Models-PEtab.git@master\\#subdirectory=src/python&egg=benchmark_models_petab\n",
-    "    import benchmark_models_petab\n"
+    "    %pip install -q -e \"git+https://github.com/Benchmarking-Initiative/Benchmark-Models-PEtab.git@master#subdirectory=src/python&egg=benchmark_models_petab\"\n",
+    "    try:\n",
+    "        import benchmark_models_petab\n",
+    "    except ModuleNotFoundError:\n",
+    "        print(\"** Please restart the kernel. **\")"
    ]
   },
   {
@@ -942,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "823278b8",
+   "id": "51527745",
    "metadata": {},
    "outputs": [],
    "source": []
